@@ -158,10 +158,12 @@ u'ms' : {u'native' : 'Bahasa Melayu', u'name' : 'Malay'},
 u'mt' : {u'native' : 'Malti', u'name' : 'Maltese',                              u'flag' : u'/++resource++country-flags/mt.gif'},
 u'my' : {u'native' : 'Burmese', u'name' : 'Burmese'},
 u'na' : {u'native' : 'Nauru', u'name' : 'Nauruan',                              u'flag' : u'/++resource++country-flags/nr.gif'},
+u'nd' : {u'native' : 'Ndebele (North)', u'name' : 'Ndebele (North)'},
 u'ne' : {u'native' : 'नेपाली', u'name' : 'Nepali'},
 u'nl' : {u'native' : 'Nederlands', u'name' : 'Dutch',                           u'flag' : u'/++resource++country-flags/nl.gif'},
 u'no' : {u'native' : 'Norsk', u'name' : 'Norwegian',                            u'flag' : u'/++resource++country-flags/no.gif'},
 u'nn' : {u'native' : 'Nynorsk', u'name' : 'Nynorsk',                            u'flag' : u'/++resource++country-flags/no.gif'},
+u'nr' : {u'native' : 'IsiNdebele', u'name' : 'Ndebele (South)'},
 u'oc' : {u'native' : 'Occitan', u'name' : 'Occitan'},
 u'om' : {u'native' : 'Oromo', u'name' : 'Oromo'},
 u'or' : {u'native' : 'ଓଡ଼ିଆ', u'name' : 'Oriya'},
@@ -188,11 +190,11 @@ u'sn' : {u'native' : 'Shona', u'name' : 'Shona'},
 u'so' : {u'native' : 'Somali', u'name' : 'Somali',                              u'flag' : u'/++resource++country-flags/so.gif'},
 u'sq' : {u'native' : 'Shqip', u'name' : 'Albanian',                             u'flag' : u'/++resource++country-flags/al.gif'},
 u'sr' : {u'native' : 'српски', u'name' : 'Serbian',                             u'flag' : u'/++resource++country-flags/cs.gif'},
-u'ss' : {u'native' : 'Siswati', u'name' : 'Siswati'},
-u'st' : {u'native' : 'Sesotho', u'name' : 'Sesotho'},
+u'ss' : {u'native' : 'SiSwati', u'name' : 'Swati'},
+u'st' : {u'native' : 'Sesotho', u'name' : 'Southern Sotho'},
 u'su' : {u'native' : 'Sudanese', u'name' : 'Sudanese',                          u'flag' : u'/++resource++country-flags/sd.gif'},
 u'sv' : {u'native' : 'Svenska', u'name' : 'Swedish',                            u'flag' : u'/++resource++country-flags/se.gif'},
-u'sw' : {u'native' : 'Swahili', u'name' : 'Swahili'},
+u'sw' : {u'native' : 'Kiswahili', u'name' : 'Swahili'},
 u'ta' : {u'native' : 'தமிழ', u'name' : 'Tamil'},
 u'te' : {u'native' : 'తెలుగు', u'name' : 'Telugu'},
 u'tg' : {u'native' : 'Тоҷики', u'name' : 'Tadjik',                              u'flag' : u'/++resource++country-flags/tj.gif'},
@@ -200,26 +202,27 @@ u'th' : {u'native' : 'ไทย', u'name' : 'Thai',                             
 u'ti' : {u'native' : 'ትግርኛ', u'name' : 'Tigrinya'},
 u'tk' : {u'native' : 'түркmенче', u'name' : 'Turkmen',                          u'flag' : u'/++resource++country-flags/tm.gif'},
 u'tl' : {u'native' : 'Tagalog', u'name' : 'Tagalog'},
-u'tn' : {u'native' : 'Setswana', u'name' : 'Setswana',                          u'flag' : u'/++resource++country-flags/bw.gif'},
+u'tn' : {u'native' : 'Setswana', u'name' : 'Tswana',                            u'flag' : u'/++resource++country-flags/bw.gif'},
 u'to' : {u'native' : 'Tonga', u'name' : 'Tonga'},
 u'tr' : {u'native' : 'Türkçe', u'name' : 'Turkish',                             u'flag' : u'/++resource++country-flags/tr.gif'},
-u'ts' : {u'native' : 'Tsonga', u'name' : 'Tsonga'},
+u'ts' : {u'native' : 'Xitsonga', u'name' : 'Tsonga'},
 u'tt' : {u'native' : 'татарча', u'name' : 'Tatar'},
 u'tw' : {u'native' : 'Twi', u'name' : 'Twi'},
 u'ug' : {u'native' : 'Uigur', u'name' : 'Uigur'},
 u'uk' : {u'native' : 'Українська', u'name' : 'Ukrainian',                       u'flag' : u'/++resource++country-flags/ua.gif'},
 u'ur' : {u'native' : 'اردو', u'name' : 'Urdu'},
 u'uz' : {u'native' : 'Ўзбекча', u'name' : 'Uzbek',                              u'flag' : u'/++resource++country-flags/uz.gif'},
+u've' : {u'native' : 'Tshivenḓa', u'name' : 'Venda'},
 u'vi' : {u'native' : 'Tiếng Việt', u'name' : 'Vietnamese',                      u'flag' : u'/++resource++country-flags/vn.gif'},
 u'vo' : {u'native' : 'Volapük', u'name' : 'Volapük'},
 u'wa' : {u'native' : 'Walon', u'name' : 'Walloon'},
 u'wo' : {u'native' : 'Wolof', u'name' : 'Wolof'},
-u'xh' : {u'native' : 'isiXhosa', u'name' : 'Xhosa'},
+u'xh' : {u'native' : 'IsiXhosa', u'name' : 'Xhosa'},
 u'yi' : {u'native' : 'ײִדיש', u'name' : 'Yiddish',                              u'flag' : u'/++resource++country-flags/il.gif'},
 u'yo' : {u'native' : 'Yorùbá', u'name' : 'Yorouba'},
 u'za' : {u'native' : 'Zhuang', u'name' : 'Zhuang'},
 u'zh' : {u'native' : '中文', u'name' : 'Chinese',                                 u'flag' : u'/++resource++country-flags/cn.gif'},
-u'zu' : {u'native' : 'isiZulu', u'name' : 'Zulu',                               u'flag' : u'/++resource++country-flags/za.gif'}
+u'zu' : {u'native' : 'IsiZulu', u'name' : 'Zulu',                               u'flag' : u'/++resource++country-flags/za.gif'}
 }
 
 # convert the utf-8 encoded values to unicode
